--- a/css/home.css
+++ b/css/home.css
@@ -1,18 +1,9 @@
+.cabecalho {
+    padding: 2.45rem 2.45rem 0 3rem;
+}
+
 .cabecalho__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-}
-
-.nav__menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 28vw;
-    padding: 3rem;
-}
-
-.nav__usuario {
-    padding-right: 2.5rem;
 }
