--- a/style.css
+++ b/style.css
@@ -15,17 +15,18 @@ body {
     font-family: var(--fonte-principal);
     font-size: 1rem;
     font-weight: 400;
-
-    
+    line-height: 1.5rem;  
 }
 
-/* HEADER */
+/* Estilizando o header */
 
 .cabecalho {
-    background-image: url("img/bg-header.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    width: 100vw;
-    height: 295px;
+    background: url("img/bg-header.svg") no-repeat;
+    background-position: left top;
+    padding: 3rem;
+    height: 80vh;
+}
+
+.cabecalho__item {
+    margin-right: 3rem;
 }
