--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --azul: #3772FF;
+    --branco: #FFFFFF;
     --verde: #36D6AD;
     --coral: #FC7071;
     --creme: #FCF0E3;
@@ -29,4 +30,13 @@ body {
 
 .cabecalho__item {
     margin-right: 3rem;
+}
+
+/* Estilizando o footer */
+
+.rodape {
+    color: var(--branco);
+    text-align: center;
+    background-color: var(--verde);
+    padding: 2rem 0;
 }
