--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,4 @@
 .cabecalho {
-    background-image: url("../img/Patas.svg"), url("../img/bg-header.svg");
-    background-repeat: no-repeat;
-    background-position: right top, left top;
-    height: 80vh;
+    background: url("../img/patas.svg") no-repeat;
+    background-position: right top;
 }
