--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,4 +1,61 @@
-.cabecalho {
-    background: url("../img/patas.svg") no-repeat;
-    background-position: right top;
+.cadastro {
+    background-color: var(--branco);
+    background-image: url("../img/patas.svg"), url("../img/forma-bg-1.svg"), url("../img/forma-bg-2-espelhada.svg");
+    background-position: right top, left top, left 75%;
+    background-repeat: no-repeat;
+    color: var(--azul);
+}
+
+.cadastro__formulario {
+    height: 620px; /*optei por definir em px para evitar sobreposição em telas menores*/
+    margin: 2rem 1rem;
+    text-align: center;
+}
+
+.cadastro__imagem {
+    margin-bottom: 1rem;
+}
+
+.cadastro__texto {
+    margin-bottom: .5rem;
+}
+
+.container-formulario {
+    color: var(--cinza);
+    display: flex;
+    flex-direction: column;
+    margin: 1.5rem .5rem;
+}
+
+.container-formulario__campo {
+    background-color: var(--cinza-input);
+    border-radius: .4rem;
+    border-style: none;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    margin-top: .2rem;
+    padding: .75rem .5rem;
+}
+
+.container-formulario__campo::placeholder {
+    color: var(--cinza-claro);
+    font-family: var(--fonte-principal);
+    font-size: .75rem;
+    text-align: center;
+}
+
+.campo--senha {
+    background-image: url("../img/icone-senha.svg");
+    background-position: right .75rem center;
+    background-repeat: no-repeat;
+}
+
+.formulario__botao {
+    color: var(--branco);
+    background-color: var(--coral);
+    border-radius: .4rem;
+    border-style: none;
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    font-weight: 600;
+    padding: .5rem 2rem;
 }
