--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url(./css/cadastro.css);
+
+
 :root {
     --azul: #3772FF;
     --branco: #FFFFFF;
@@ -7,6 +10,8 @@
     --cinza: #737380;
     --cinza-claro: #BCBCBC;
     --cinza-fundo: #F6F6F6;
+    --cinza-input: #f7f7f7;
+
 
     --fonte-principal: 'Poppins', sans-serif;
     --fonte-secundaria: 'IBM Plex Sans', sans-serif;
