--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -28,7 +28,7 @@
 }
 
 .container-formulario__campo {
-    background-color: var(--cinza-input);
+    background-color: var(--cinza-claro-bg);
     border-radius: .4rem;
     border-style: none;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
