página inicial - tablet e desktop

--- a/css/home.css
+++ b/css/home.css
@@ -4,10 +4,10 @@
     background-position: left top;
     color: var(--azul);
 }
-
+/*
 .cabecalho {
     padding-top: 2.45rem;
-}
+}*/
 
 .cabecalho__nav {
     align-items: center;
