--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,4 +1,4 @@
-.cabecalho {
+/*.cabecalho {
     padding-top: 2.45rem;
 }
 
@@ -6,4 +6,4 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+}*/
