--- a/style.css
+++ b/style.css
@@ -25,24 +25,61 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5rem;
-
-    background: url("img/forma-bg-1.svg") no-repeat;
-    background-position: left top;
 }
 
-/*Estilizando o header*/
-.cabecalho {
-    padding: 3rem;
+
+/*------------------------------header*/
+
+.cabecalho__nav {
+    margin: 3rem;
+    width: 100px;
 }
 
-.cabecalho__item {
-    margin-right: 3rem;
+.cabecalho__logo {
+    display: none;
 }
 
-/*Estilizando o footer*/
+
+/*------------------------------footer*/
+
 .rodape {
-    color: var(--branco);
-    text-align: center;
     background-color: var(--verde);
+    color: var(--branco);
     padding: 2rem 0;
+    text-align: center;
+}
+
+
+/*------------------------------TABLET*/
+
+@media screen and (min-width: 768px) {
+
+    .cabecalho {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 4rem 3rem 0;
+        width: 304px;
+    }
+
+    .cabecalho__logo {
+        display: inline;
+        height: 2rem;
+        width: 8rem;
+    }
+
+    .cabecalho__nav {
+        margin: 0 0 0 3rem;
+    }
+}
+
+
+/*------------------------------DESKTOP*/
+
+@media screen and (min-width: 1440px) {
+
+    .cabecalho {
+        margin-left: 10rem;
+        width: 255px;
+    }
 }
