--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,14 @@
 .body-inicial {
     background:
-    url("../img/background-top.svg") no-repeat top left,
-    url("../img/background-right.svg") no-repeat right 40%,
-    url("../img/ilustration-cat-dog.svg") no-repeat bottom 4rem left 35%,
-    var(--azul);
+        url("../img/background-top.svg") no-repeat top left,
+        url("../img/background-right.svg") no-repeat right 40%,
+        url("../img/ilustration-cat-dog.svg") no-repeat bottom 4rem left 35%,
+        var(--azul);
     color: var(--branco);
 }
 
-/*---style do cabecalho no arquivo style.css*/
+
+/*---css do cabecalho no arquivo style.css*/
 
 /*------------------------------main*/
 .chamada {
@@ -20,7 +21,7 @@
     font-family: var(--fonte-secundaria);
     font-size: 1.625rem;
     font-weight: 500;
-    margin: 2rem 0 1.5rem;
+    margin: 1.5rem 0 2rem;
 }
 
 .chamada__texto-tablet {
@@ -48,7 +49,7 @@
 }
 
 
-/*---style do rodapé no arquivo style.css*/
+/*---css do rodapé no arquivo style.css*/
 
 
 /*------------------------------TABLET*/
@@ -57,11 +58,11 @@
 
     .body-inicial {
         background-position: top left, right 40%, bottom 4rem left 45%; 
-        background-size: 560px, 134px, 338px; 
+        background-size: 560px, 134px, 338px;
     }
 
     .chamada {
-        height: 790px;
+        height: 850px;
         margin: 11rem 13rem 0;
     }
 
@@ -85,8 +86,13 @@
         line-height: 1.6rem;
     }
 
+    .botao__item:first-child {
+        margin-top: 1.87rem;
+    }
+
     .botao__item {
         width: 20rem;
+        padding: .75rem;
     }
 
     .botao__texto {
@@ -105,7 +111,13 @@
 
     .chamada {
         margin: 2.25rem auto 0;
+        height: 810px;
         width: 480px;
+    }
+
+    .chamada__logo {
+        width: 259px;
+        margin-bottom: .5rem;
     }
 
     .chamada__texto-tablet {
@@ -116,5 +128,13 @@
         align-items: center;
         display: flex;
         flex-direction: column;
+    }
+
+    .botao__item:first-child {
+        margin-top: 1.3rem;
+    }
+
+    .botao__item {
+        width: 21rem;
     }
 }
