--- a/css/home.css
+++ b/css/home.css
@@ -1,32 +1,30 @@
-.home {
-    background-color: var(--branco);
-    background: url("../img/forma-bg-1.svg") no-repeat;
-    background-position: left top;
+.body-usuario {
+    background:
+    url("../img/background-top.svg") no-repeat top left,
+    var(--branco);
     color: var(--azul);
 }
-/*
-.cabecalho {
-    padding-top: 2.45rem;
-}*/
 
-.cabecalho__nav {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-}
+
+/*---css do cabecalho no arquivo style.css*/
+
+/*------------------------------main*/
 
 .galeria__texto {
     line-height: 1.25rem;
-    margin: 1rem 4rem 2rem;
+    margin: 4.5rem 4rem 2rem;
     text-align: center;
 }
 
 .lista-pets__item {
     background-color: var(--cinza-claro-bg);
     display: flex;
+    align-items: center;
     justify-content: space-around;
+    height: 12.25rem;
     margin: 1em 0;
-    padding: 1.5rem;
+    padding: .5rem 1.5rem;
+
 }
 
 .lista-pets__item:last-child {
@@ -34,7 +32,8 @@
 }
 
 .item__imagem {
-    object-fit: contain;
+    height: 9rem;
+    width: 9rem;
 }
 
 .caracteristicas__nome {
@@ -44,7 +43,7 @@
 
 .caracteristicas__item {
     color: var(--cinza);
-    font-size: .8rem;
+    font-size: .9rem;
     line-height: 1.25rem;
 }
 
@@ -65,4 +64,81 @@
     font-weight: 400;
     margin-left: .5rem;
     text-decoration: none;
+}
+
+
+/*---css do cabecalho no arquivo style.css*/
+
+
+/*------------------------------TABLET*/
+
+@media screen and (min-width: 768px) {
+
+    .body-usuario {
+        background-size: 560px;
+    }
+
+    .galeria {
+        margin: 0 2rem;
+    }
+
+    .galeria__texto {
+        font-size: 1.125rem;
+        margin-top: 11.5rem;
+    }
+
+    .galeria__texto span {
+        display: block;
+    }
+
+    .lista-pets {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 0 auto;
+        width: 44rem;
+    }
+
+    .lista-pets__item {
+        margin-bottom: 0;
+        width: 18.5rem;
+    }
+
+    .lista-pets__item:last-child {
+        margin-bottom: 2rem;
+    }
+}
+
+
+/*------------------------------DESKTOP*/
+
+@media screen and (min-width: 1440px) {
+
+    .body-usuario {
+        background: 
+            url("../img/background-top.svg") no-repeat top left,
+            url("../img/background-right.svg") no-repeat right 40%;
+        background-size: 560px, 115px;
+    }
+
+    .galeria__texto {
+        margin-top: 5.8rem;
+    }
+
+    .galeria__texto span {
+        display: inline;
+    }
+
+    .lista-pets {
+        width: 70rem;
+    }
+
+    .lista-pets__item {
+        margin: .5rem 0;
+        width: 19.7rem;
+    }
+
+    .lista-pets__item:last-child {
+        margin-bottom: 3.75rem;
+    }
 }
