--- a/css/mensagem.css
+++ b/css/mensagem.css
@@ -1,9 +1,105 @@
-/*.cabecalho {
-    padding-top: 2.45rem;
+/*---css do cabecalho no arquivo style.css*/
+
+
+/*------------------------------main*/
+
+.mensagem {
+    margin: 5.3rem 1.5rem 1rem;
+    text-align: center;
 }
 
-.cabecalho__nav {
+.mensagem__titulo {
+    line-height: 1.25rem;
+    margin: 0 1.5rem 1.5rem;
+}
+
+.mensagem__formulario {
+    background-color: var(--cinza-claro-bg);
+    border-radius: .6rem; 
+    padding: 2rem 1rem;
+}
+
+.container-mensagem {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}*/
+    flex-direction: column;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    text-align: left;
+}
+
+.container-mensagem__campo {
+    background-color: var(--branco);
+    border-radius: .4rem;
+    border-style: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    margin-top: .5rem;
+    padding: 1rem .75rem;
+}
+
+.container-mensagem__campo::placeholder {
+    color: var(--cinza-claro);
+    font-family: var(--fonte-principal);
+    font-size: .875rem;
+}
+
+.formulario__botao {
+    margin-top: 1rem;
+}
+
+
+/*---css do rodapé no arquivo style.css*/
+
+
+/*------------------------------TABLET*/
+
+@media screen and (min-width: 768px) {
+
+    .body-mensagem {
+        background:
+            url("../img/background-top.svg") no-repeat top left,
+            url("../img/background-right.svg") no-repeat right 55%;
+        background-size: 560px, 115px;
+    }
+
+    .mensagem {
+        margin: 11.5rem 7.5rem 5.5rem;
+    }
+
+    .mensagem__titulo {
+        font-size: 1.125rem;
+        line-height: 1.625rem;
+        margin-bottom: 2.5rem;
+    }
+
+    .mensagem__formulario {
+        border-radius: .4rem; 
+    }
+
+    .formulario__botao {
+        font-size: 1rem;
+    }
+}
+
+
+/*------------------------------DESKTOP*/
+
+@media screen and (min-width: 1440px) {
+
+    .mensagem {
+        margin: 0;
+    }
+
+    .mensagem__titulo {
+        font-size: 1.125rem;
+        line-height: 1.625rem;
+        margin: 5.2rem auto 2.5rem;
+        width: 30.75rem;
+    }
+
+    .mensagem__formulario {
+        margin: 1rem auto 2rem;
+        padding: 2rem 1.875rem;
+        width: 34.5rem;
+        box-sizing: border-box;
+    }
+}
