--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import url(./css/login.css);
 @import url(./css/home.css);
 @import url(./css/mensagem.css);
+@import url(./css/perfil.css);
 
 :root {
     --azul: #3772FF;
@@ -55,6 +56,13 @@ body {
     margin: 2.45rem 2.45rem 0 3rem;
 }
 
+/*---header perfil.html*/
+
+.usuario__foto {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
 
 /*------------------------------footer*/
 
@@ -96,6 +104,12 @@ body {
         width: 3rem;
     }
 
+    /*---header perfil.html*/
+
+    .usuario__foto {
+        width: 3rem;
+        height: 3rem;
+    }
 }
 
 
@@ -123,5 +137,12 @@ body {
 
     .usuario__icone {
         width: 3.5rem;
+    }
+
+    /*---header perfil.html*/
+
+    .usuario__foto {
+        width: 3.5rem;
+        height: 3.5rem;
     }
 }
